Fixed the input for phone input field, removed horizontal scroll

--- a/04-homework/styles.css
+++ b/04-homework/styles.css
@@ -54,6 +54,7 @@ table {
 body{
     font-family: 'Lato', sans-serif;
     color: #FFFFFF; 
+    overflow-x: hidden;
 
 }
 
